# rathernet

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  env.ps1
assets/acsma/: JammingWav.m  analyse.py  grade.py
assets/aftp/: serverlist.txt
assets/ateway/: INPUT.txt  node1.toml  node1_star.toml  node2.toml  node2_star.toml  route.ps1
assets/ather/: INPUT.txt  calibrate.py  calibrate.txt  decode_symbol.py  grade.py  header.json  ofdm.mlx  one.json  plot_signal.py  preamble.json  process.mlx  zero.json
scripts/racsma/part1/: ch1.ps1
scripts/racsma/part2/: ch1.ps1  ch2.ps1
scripts/racsma/part3/: ch1.ps1
scripts/racsma/part4/: ch1.ps1
scripts/racsma/part5/: ch1.ps1
scripts/racsma/part6/: ch1.ps1
scripts/racsma/part7/: ch1.ps1
scripts/raftp/part1/: ch1.ps1
scripts/raftp/part2/: ch1.ps1
scripts/raftp/part3/: ch1.ps1
scripts/raftp/part4/: ch1.ps1
scripts/raftp/part5/: ch1.ps1
scripts/raftp/part5a/: ch1.ps1
scripts/rateway/part1/: ch1.ps1
scripts/rateway/part10/: ch1.ps1
scripts/rateway/part11/: ch1.ps1
scripts/rateway/part2/: ch1.ps1  ch2.ps1
scripts/rateway/part3/: ch1.ps1  ch2.ps1
scripts/rateway/part4/: ch1.ps1
scripts/rateway/part5/: ch1.ps1
scripts/rateway/part5a/: ch1.ps1
scripts/rateway/part6/: ch1.ps1  ch2.ps1
scripts/rather/: part1.lnk
scripts/rather/part2/: ch1.ps1
scripts/rather/part3/: ch1.ps1
scripts/rather/part4/: ch1.ps1
scripts/rather/part5/: ch1.ps1
scripts/rather/part6/: ch1.ps1
scripts/rather/part8/: ch1.ps1
scripts/raudio/part1/: ch1.ps1  ch2.ps1
src/: lib.rs  main.rs
src/racsma/: builtin.rs  frame.rs  mod.rs  socket.rs  stream.rs
src/raftp/: editor.rs  mod.rs
src/rateway/: adapter.rs  builtin.rs  fragment.rs  mod.rs  nat.rs  socket.rs  utils.rs
src/rateway/tcp/: conn.rs  mod.rs
src/rateway/tools/: ping.rs
src/rather/: ather.rs  builtin.rs  conv.rs  corr.rs  encode.rs  frame.rs  mod.rs  signal.rs  stream.rs
src/raudio/: asio.rs  mod.rs  stream.rs  track.rs
