[package]
name = "rathernet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitflags = "2.4.0"
bitvec = "1.0.1"
clap = { version = "4.4.3", features = ["derive"] }
cpal = { version = "0.15.2", features = ["asio"] }
crc = "3.0.1"
env_logger = "0.10.0"
futures = "0.3.28"
hound = "3.5.0"
ipnet = "2.8.0"
log = "0.4.20"
lru = "0.12.0"
num = "0.4.1"
packet = "0.1.4"
parking_lot = "0.12.1"
pcap = "1.1.0"
rand = { version = "0.8.5", features = ["small_rng"] }
realfft = "3.3.0"
reed-solomon-erasure = { version = "6.0.0", features = ["simd-accel"] }
rodio = "0.17.1"
serde = { version = "1.0.189", features = ["derive"] }
socket2 = "0.5.4"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.9", features = ["full"] }
toml = "0.8.2"
tun = { version = "0.6.1", features = ["async"] }

[patch.crates-io]
cpal = { git = "https://github.com/RustAudio/cpal.git", rev = "f51589c" }
