[package]
name = "rathernet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async_ftp = "6.0.0"
bitflags = "2.4.0"
bitvec = "1.0.1"
clap = { version = "4.4.3", features = ["derive"] }
cpal = { version = "0.15.2", features = ["asio"] }
crc = "3.0.1"
env_logger = "0.10.0"
etherparse = "0.13.0"
futures = "0.3.28"
fixed = { version = "1.24.0", features = ["std"] }
hound = "3.5.0"
ipconfig = "0.3.2"
ipnet = "2.8.0"
log = "0.4.20"
lru = "0.12.0"
num = "0.4.1"
packet = "0.1.2"
parking_lot = "0.12.1"
pcap = "1.1.0"
pnet_base = "0.34.0"
pnet_packet = "0.34.0"
rand = { version = "0.8.5", features = ["small_rng"] }
realfft = "3.3.0"
reed-solomon-erasure = { version = "6.0.0", features = ["simd-accel"] }
ringbuffer = "0.15.0"
rodio = "0.17.1"
rustyline = { version = "12.0.0", features = ["derive"] }
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.9", features = ["full"] }
toml = "0.8.2"
tun = { version = "0.6.1", features = ["async"] }

[patch.crates-io]
cpal = { git = "https://github.com/RustAudio/cpal.git", rev = "f51589c" }
packet = { git = "https://github.com/meh/rust-packet.git", rev = "3e2c4dd" }
